--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
         "type": "image/png"
       }
     ],
-    "start_url": "/index.html",
+    "start_url": "/welcome.html",
     "background_color": "#ffffff",
     "display": "standalone",
     "theme_color": "#000000"
