--- a/app.json
+++ b/app.json
@@ -1,22 +1,17 @@
 {
-    "name": "Siksha",
-    "short_name": "Siksha",
-    "description": "A brief description of your app",
-    "icons": [
+  "name": "Adarsha Nanda",
+  "short_name": "Adarsha",
+  "theme_color": "#ffcbe4",
+  "background_color": "#fa99ca",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "welcome.html",
+  "description": "Blog and Resume for Christine Dodrill",
+  "orientation": "any",
+  "icons": [
       {
-        "src": "/img/favicon.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      },
-      {
-        "src": "",
-        "sizes": "512x512",
-        "type": "image/png"
+          "src": "/data/logo.png",
+          "sizes": "1024x1024"
       }
-    ],
-    "start_url": "/welcome.html",
-    "background_color": "#ffffff",
-    "display": "standalone",
-    "theme_color": "#000000"
-  }
-  
+  ]
+}
