--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Adarsha Nanda",
-  "short_name": "Adarsha",
+  "name": "Siksha",
+  "short_name": "Siksha",
   "theme_color": "#0c0034",
   "background_color": "#0c0034",
   "display": "standalone",
