--- a/app.json
+++ b/app.json
@@ -10,8 +10,14 @@
   "orientation": "any",
   "icons": [
       {
-          "src": "/data/logo.png",
-          "sizes": "1024x1024"
+          "src": "/data/logo-192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+      },
+      {
+          "src": "/data/logo-512.png",
+          "sizes": "512x512",
+          "type": "image/png"
       }
   ]
 }
