--- a/app.json
+++ b/app.json
@@ -10,14 +10,8 @@
   "orientation": "any",
   "icons": [
       {
-          "src": "/data/logo-192.png",
-          "sizes": "192x192",
-          "type": "image/png"
-      },
-      {
-          "src": "/data/logo-512.png",
-          "sizes": "512x512",
-          "type": "image/png"
+          "src": "/data/logo.png",
+          "sizes": "1024x1024"
       }
   ]
 }
